--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "phosphor-icons": "^1.4.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
